fix: vertically align checkbox and label in dropdown options

--- a/.dev/src/media/main.css
+++ b/.dev/src/media/main.css
@@ -552,7 +552,7 @@
         & > li {
           @apply m-0 flex list-none items-center gap-2 p-0;
           & > form {
-            @apply pointer-events-none;
+            @apply pointer-events-none flex items-center;
           }
           &[placeholder] {
             @apply hidden;
